# unit_test

snarkOS/: Cargo.toml
snarkVM/algorithms/: Cargo.toml
snarkVM/algorithms/cuda/: Cargo.toml
snarkVM/algorithms/cuda/cuda/: snarkvm.cu  snarkvm_api.cu
snarkVM/algorithms/cuda/src/: lib.rs
snarkVM/algorithms/src/msm/variable_base/: mod.rs
snarkVM/fields/src/traits/: prime_field.rs
snarkVM/synthesizer/src/coinbase_puzzle/: hash.rs  mod.rs  tests.rs
snarkVM/utilities/src/: rand.rs
sppark/msm/: pippenger.cuh
sppark/rust/src/: lib.rs
testblake2b/: Cargo.toml
testblake2b/src/: main.rs
testmsm/: Cargo.toml
testmsm/src/: main.rs  main_rs_bak
