[package]
name = "testblake2b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snarkvm = { path = "../snarkVM" }
snarkvm-algorithms = { path = "../snarkVM/algorithms" }
snarkos-account = { path = "../snarkOS/account" }
snarkos-node-messages = { path = "../snarkOS/node/messages" }
snarkvm-synthesizer = { path = "../snarkVM/synthesizer" }
snarkvm-console = { path = "../snarkVM/console" }
snarkvm-console-network = { path = "../snarkVM/console/network" }
snarkvm-console-account = { path = "../snarkVM/console/account" }
snarkvm-algorithms-cuda = { path = "../snarkVM/algorithms/cuda" }

[dependencies.circuit]
package = "snarkvm-circuit"
path = "../snarkVM/circuit"

[dependencies.snarkvm-curves]
path = "../snarkVM/curves"

[dependencies.snarkvm-fields]
path = "../snarkVM/fields"

[dependencies.snarkvm-utilities]
path = "../snarkVM/utilities"
default-features = false

[dependencies.aleo-std]
version = "0.1.15"
default-features = false

[dependencies.anyhow]
version = "1.0.66"

[dependencies.criterion]
version = "0.4.0"

[dependencies.blake2]
version = "0.10"
default-features = false

[dependencies.colored]
version = "2"

[dependencies.indexmap]
version = "1.8"
features = [ "serde", "rayon" ]

[dependencies.once_cell]
version = "1.13"

[dependencies.parking_lot]
version = "0.12"

[dependencies.paste]
version = "1.0.9"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"
optional = true

[dependencies.reqwest]
version = "0.11"
features = [ "blocking", "json" ]

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.bincode]
version = "1.3"

[dev-dependencies.criterion]
version = "0.4.0"
